OpenJMLTest/test/refining2/expected
test/refining2/TestRefinesBad.java:6: error: Improperly nested spec-end pair
        //@ begin
            ^
test/refining2/TestRefinesBad.java:14: error: Improperly nested spec-end pair
        //@ end
            ^
test/refining2/TestRefinesBad.java:23: error: Expected an 'end' statement to match the begin statement before the end of block
        //@ begin
            ^
test/refining2/TestRefinesBad.java:32: error: Improperly nested spec-end pair
        //@ end
            ^
test/refining2/TestRefinesBad.java:39: error: Statement specs found at the end of a block (or before an erroneous statement)
        //@ refining ensures true;
            ^
Continuing bravely despite parsing errors
Operation not performed because of parse or type errors
5 errors
